minor changes (doi, bio, designation)

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <!-- <hr> -->
           <p>
             Assistant Professor at SRM University-AP.<br>
-            Focused on predictive modeling, financial forecasting, and diagnostic AI.
+            Focused on predictive modeling, and diagnostic AI.
           </p>
           <!-- <div class="signature">Sidharth Samal</div> -->
         </div>
@@ -148,32 +148,37 @@
     <li class="pub-item">
       Samal, S., &amp; Dash, R. (2025). Developing a two stage optimized random vector functional link neural network based predictor model utilizing a swift crow search algorithm. 
       <em>Cluster Computing</em>, 28(3), 161. 
-      <span class="tag scie">SCIE</span> 
-      <a href="https://doi.org/10.1007/s10586-024-04789-5" target="_blank" class="doi-link">DOI</a>
+      <!-- <span class="tag scie">SCIE</span>  -->
+      <a href="https://doi.org/10.1007/s10586-024-04875-9" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> A two‑step forecasting setup: first pick the best features, then tune the RVFL neural net using a Swift Crow Search Algorithm, an improved variant of the original CSA. Applied to stock indices, it improves both price and direction predictions compared to baselines.</p>
     </li>
     <li class="pub-item">
       Samal, S., &amp; Dash, R. (2023). Developing a novel stock index trend predictor model by integrating multiple criteria decision-making with an optimized online sequential extreme learning machine. 
       <em>Granular Computing</em>, 8(3), 411–440. 
-      <span class="tag esci">ESCI</span> 
-      <a href="https://doi.org/10.1007/s41066-022-00353-5" target="_blank" class="doi-link">DOI</a>
+      <!-- <span class="tag esci">ESCI</span>  -->
+      <a href="https://doi.org/10.1007/s41066-022-00338-x" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> Focuses on predicting trend (up/down) based of predicted Price of a stock index using an OSELM-MCDM framework that learns online. Handy for streaming data where quick trend signals matter more than exact prices.</p>
     </li>
     <li class="pub-item">
       Samal, S., &amp; Dash, R. (2022). A Novel MCDM Ensemble Approach of Designing an ELM-Based Predictor for Stock Index Price Forecasting. 
       <em>Intelligent Decision Technologies</em>, 16(2), 387–406. 
-      <span class="tag esci">ESCI</span> 
-      <a href="https://doi.org/10.3233/IDT-210178" target="_blank" class="doi-link">DOI</a>
+      <!-- <span class="tag esci">ESCI</span>  -->
+      <a href="https://doi.org/10.3233/IDT-210152" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> Builds an ensemble of MCDM-ELM models where a Occurrence-based Rank-Sum ensemble of MCDM decides which models to include and how to weight them. The ensemble beats single ELMs and offers more stable forecasts across different market conditions.</p>
     </li>
     <li class="pub-item">
       Samal, S., &amp; Dash, R. (2021). A TOPSIS-ELM framework for stock index price movement prediction. 
       <em>Intelligent Decision Technologies</em>, 15(2), 201–220. 
-      <span class="tag esci">ESCI</span> 
-      <a href="https://doi.org/10.3233/IDT-200178" target="_blank" class="doi-link">DOI</a>
+      <!-- <span class="tag esci">ESCI</span>  -->
+      <a href="https://doi.org/10.3233/IDT-200013" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> An earlier experimentation pairing TOPSIS (a decision tool) with ELM to pick the best ELM-Activation function configurations for binary up/down prediction. Useful if you want a systematic way to choose activation function for ELM model.</p>
     </li>
     <li class="pub-item">
       Dash, R., Samal, S., Dash, R., &amp; Rautray, R. (2019). An integrated TOPSIS crow search-based classifier ensemble: In application to stock index price movement prediction. 
       <em>Applied Soft Computing</em>, 85, 105784. 
-      <span class="tag scie">SCIE</span> 
+      <!-- <span class="tag scie">SCIE</span>  -->
       <a href="https://doi.org/10.1016/j.asoc.2019.105784" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> Combines TOPSIS to rank classifiers and Crow Search to tune ensemble weights. On several indices, this hybrid ensemble beats plain majority voting and single classifiers in stock index movement prediction.</p>
     </li>
   </ol>
 
@@ -182,27 +187,32 @@
     <li class="pub-item">
       Samal, S., &amp; Dash, R. (2022). Stock Index Movement Prediction: A Crow Search-ELM Approach. 
       In <em>Innovation in Electrical Power Engineering, Communication, and Computing Technology</em>, pp. 349–356. Springer, Singapore. 
-      <a href="https://doi.org/10.1007/978-981-16-7076-3_34" target="_blank" class="doi-link">DOI</a>
+      <a href="https://doi.org/10.1007/978-981-16-7076-3_30" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> Applies Crow Search Algorithm to tune ELM for movement prediction. A compact, practical demo of meta‑heuristic + fast learner for financial forecasting tasks.</p>
     </li>
     <li class="pub-item">
       Samal, S., &amp; Dash, R. (2022). An Empirical Comparison of TOPSIS and VIKOR for Ranking Decision-Making Models. 
       In <em>Intelligent and Cloud Computing</em>, pp. 429–437. Springer, Singapore. 
-      <a href="https://doi.org/10.1007/978-981-16-9873-6_41" target="_blank" class="doi-link">DOI</a>
+      <a href="https://doi.org/10.1007/978-981-16-9873-6_39" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> Compares two popular MCDM methods (TOPSIS vs VIKOR) for ranking benchmark models. Handy guidance when you need to pick a ranking method for model selection.</p>
     </li>
     <li class="pub-item">
       Samal, S., &amp; Dash, R. (2021). A TWV Classifier Ensemble Framework. 
       In <em>Intelligent and Cloud Computing</em>, 255–262. Springer, Singapore. 
-      <a href="https://doi.org/10.1007/978-981-15-3971-6_30" target="_blank" class="doi-link">DOI</a>
+      <a href="https://doi.org/10.1007/978-981-15-5971-6_28" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> Presents a TOPSIS-based Weighted Voting ensemble (classifier combination framework) focused on improving robustness in index movement prediction.</p>
     </li>
     <li class="pub-item">
       Samal, S., &amp; Dash, R. (2021). A Hybrid Fruit Fly ELM Framework for Stock Index Price Movement Prediction. 
       In <em>2021 International Conference on Advances in Power, Signal, and Information Technology (APSIT)</em>, pp. 1–5. IEEE. 
-      <a href="https://doi.org/10.1109/APSIT52773.2021.9641278" target="_blank" class="doi-link">DOI</a>
+      <a href="https://doi.org/10.1109/APSIT52773.2021.9641098" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> Combines the Fruit‑Fly optimization algorithm with ELM to tune model parameters for binary movement prediction. A quick, meta‑heuristic based tuning approach that worked well in experiments.</p>
     </li>
     <li class="pub-item">
       Dash, R., Samal, S., Rautray, R., &amp; Dash, R. (2019). A TOPSIS approach of ranking classifiers for stock index price movement prediction. 
       In <em>Soft Computing in Data Analytics</em>, pp. 665–674. Springer, Singapore. 
       <a href="https://doi.org/10.1007/978-981-13-0514-6_63" target="_blank" class="doi-link">DOI</a>
+      <p class="pub-summary"><span class="summary-label">Summary:</span> Early work that uses TOPSIS to rank classifiers (RBF, SVM, kNN, etc.) for stock index movement prediction. A principled way to compare base learners beyond single performance evaluation metrics.</p>
     </li>
   </ol>
 
@@ -214,12 +224,13 @@
 </div>
 
   <footer class="pub-footer">
-    <p><strong>Last updated on 10th November 2025</strong></p>
+    <p><strong>Last updated on 13th November 2025</strong></p>
   </footer>
 
   <a href="#teaching" class="down-arrow"></a>
 </section>
 <div class="page-separator"></div>
+S
 
 <!-- TEACHING -->
 <section id="teaching" class="fade-section">
@@ -271,25 +282,31 @@
     </p>
 
     <p>
-      I completed my <strong>Ph.D. in Computer Science & Engineering</strong> from <em>Siksha 'O' Anusandhan (Deemed to be University), Bhubaneswar, Odisha, India</em> (2025), where I developed optimized Lightweight Neural Networks using MCDM and Evolutionary Optimization algorithms. My work has been published in <strong>SCIE/ESCI journals</strong> with over <strong>136 citations</strong>.
+      I completed my <strong>Ph.D. in Computer Science & Engineering</strong> from <em>Siksha 'O' Anusandhan (Deemed to be University), Bhubaneswar, Odisha, India</em> (2025), where I developed optimized Lightweight Neural Networks using MCDM and Evolutionary Optimization algorithms. 
+      <!-- My work has been published in <strong>SCIE/ESCI journals</strong> with over <strong>136 citations</strong>. -->
     </p>
 
     <div class="bio-timeline-simple">
       <div class="bio-entry">
-        <strong>2025 – Present</strong><br>
-        Assistant Professor, SRM University-AP
+        <strong>Present:</strong> Assistant Professor<br>
+        Department of Computer Science & Engineering, SEAS<br>
+        SRM University-AP, Amaravati, Andhra Pradesh, India
       </div>
       <div class="bio-entry">
-        <strong>2018 – 2023</strong><br>
-        Ph.D., Siksha 'O' Anusandhan (Deemed to be University), Bhubaneswar, Odisha, India<br>
-        <em>Thesis: Financial Time Series Analysis: An Integrated Machine Learning-MCDM Approach</em><br>
-        <em><strong>Advisor:  Prof. (Dr.) Rajashree Dash</strong></em>
+        <!-- <strong>2018 – 2023</strong><br> -->
+         <strong>Ph.D</strong>: 
+        Siksha 'O' Anusandhan (Deemed to be University), Bhubaneswar, Odisha, India<br>
+        <em><strong>Thesis: </strong>Financial Time Series Analysis: An Integrated Machine Learning-MCDM Approach</em><br>
+        <em><strong>Advisor: 
+          <a href="https://scholar.google.co.in/citations?user=ngRgKl4AAAAJ&hl=en&oi=ao" 
+            target="_blank">Prof. (Dr.) Rajashree Dash</a>
+        </strong></em>
       </div>
-      <div class="bio-entry">
+      <!-- <div class="bio-entry">
         <strong>2016 – 2018</strong><br>
         M.Tech in CSE, Siksha 'O' Anusandhan (Deemed to be University), Bhubaneswar, Odisha, India<br>
         <em>Thesis: To be Updated...</em>
-      </div>
+      </div> -->
     </div>
 
     <!-- <div class="bio-highlights">
