--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </li>
   </ol>
 
- <h3>Research Metrics <small>(Updated: December 2025)</small></h3>
+ <h3>Research Metrics <small>(Updated: January 2026)</small></h3>
 <div class="metrics-inline">
   <span class="metric-item"><strong>h-Index:</strong> 6</span>
   <span class="metric-item"><strong>i10-Index:</strong> 4</span>
@@ -224,7 +224,7 @@
 </div>
 
   <footer class="pub-footer">
-    <p><strong>Last updated on 30th December 2025</strong></p>
+    <p><strong>Last updated on 3rd January 2026</strong></p>
   </footer>
 
   <a href="#teaching" class="down-arrow"></a>
